User can list book for sale. #4

--- a/index.html
+++ b/index.html
@@ -97,52 +97,52 @@
     </div>
   </div>
   <div class="container">
-    <form>
+    <form action="/" method="post">
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="firstName">First Name</label>
-          <input type="text" id="firstName" class="form-control">
+          <input type="text" name="firstname" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" class="form-control">
+          <input type="text" name="lastname" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="email">Email</label>
-          <input type="text" id="email" class="form-control">
+          <input type="text" name="email" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 form-group">
           <label for="phone">Phone Number</label>
-          <input type="text" id="phone" class="form-control">
+          <input type="text" name="phone" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="bookName">Book Name</label>
-          <input type="text" id="bookName" class="form-control">
+          <input type="text" name="bookname" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="bookAuthor">Book Author</label>
-          <input type="text" id="bookAuthor" class="form-control">
+          <input type="text" name="bookauthor" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-2 form-group">
           <label for="sellPrice">Sell Price</label>
-          <input type="text" id="sellPrice" class="form-control">
+          <input type="text" name="sellprice" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <button id="submitList" type="button" class="center-block btn btn-primary">List Book</button>
+          <button id="submitList" type="submit" class="center-block btn btn-primary">List Book</button>
       </div>
     </form>
   </div>
