--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Book Recycle</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"><link href="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.2.8/theme-default.min.css"
+    rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="css/default.css">
 </head>
 <body>
@@ -32,35 +33,35 @@
           <div class="row">
             <div class="col-md-6 form-group">
               <label for="name">Name</label>
-              <input data-validation="alphanumeric" type="name" class="form-control" id="name" placeholder="Name" >
+              <input data-validation="required" data-validation="alphanumeric" data-validation-help="Enter First and Last name" type="name" class="form-control" id="name" placeholder="Name" >
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 form-group">
               <label for="Address">Address</label>
-              <input type="address" class="form-control" id="address" placeholder="Address">
+              <input type="text" data-validation="required" data-validation-help="Enter Address" class="form-control" id="address" placeholder="Address">
             </div>
          </div>
           <div class="row">
             <div class="col-md-6 form-group">
               <label for="city">City</label>
-              <input type="city" class="form-control" id="city" placeholder="City">
+              <input type="text" data-validation="required" data-validation-help="Enter City" class="form-control" id="city" placeholder="City">
             </div>
           </div>
           <div class="row">
-            <div class="col-md-1 form-group">
+            <div class="col-md-2 form-group">
               <label for="state">State</label>
-              <input type="text" class="form-control" data-validation="federatestate">
+              <input type="text" name="user_home_state" data-validation="required" data-validation="federatestate" data-validation-help="Enter State" class="form-control" >
             </div>
             <div class="col-md-2 form-group">
-              <label for="zipcode">Zip Code</label>
-              <input type="zipcode" class="form-control" id="zipcode" placeholder="Zip Code" data-validation="length" data-validation-length="5">
+              <label for="zipCode">Zip Code</label>
+              <input type="text" id="zipcode" placeholder="Zip Code" data-validation="number" data-validation-length="max5" data-validation-help="Please enter zip code" class="form-control">
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 form-group">
               <label for="email">Email</label>
-              <input data-validation="email" type="email" class="form-control" id="email" placeholder="Email">
+              <input type="text" data-validation="email" data-validation-help="Enter email address" class="form-control" id="email" placeholder="Email">
             </div>
           </div>
           <div class="row">
@@ -76,7 +77,7 @@
           </div>
           <div class="row">
             <div class="col-md-2 form-group">
-              <select name="credit-card" class="form-control" id="credit-card">
+              <select name="credit-card" id="credit-card" class="form-control">
                 <option value="visa">VISA</option>
                 <option value="mastercard">Mastercard</option>
                 <option value="amex">American express</option>
@@ -84,7 +85,7 @@
               </select>
             </div>
             <div class="col-md-4 form-group">
-              <input type="text" class="form-control" placeholder="Enter Credit Card Number" name="creditcard_num" data-validation="creditcard" data-validation-allowing="visa">
+              <input name="creditcard_num" data-validation="creditcard" data-validation-allowing="visa" class="form-control" placeholder="Enter Credit Card Number" >
             </div>
           </div>
         </form>
@@ -101,43 +102,43 @@
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="firstName">First Name</label>
-          <input type="text" name="firstname" class="form-control">
+          <input type="text" data-validation="required" data-validation"alphanumeric" data-validation-help="Enter First Name" name="firstname" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="lastName">Last Name</label>
-          <input type="text" name="lastname" class="form-control">
+          <input type="text" name="lastname" data-validation="required" data-validation"alphanumeric" data-validation-help="Enter Last Name" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="email">Email</label>
-          <input type="text" name="email" class="form-control" data-validation="email">
+          <input type="text" data-validation="required" data-validation="email" data-validation-help="Enter email address" name="email" class="form-control" data-validation="email">
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 form-group">
           <label for="phone">Phone Number</label>
-          <input type="text" name="phone" class="form-control">
+          <input type="text" data-validation="required" data-validation-help="Enter phone number" name="phone" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="bookName">Book Name</label>
-          <input type="text" name="bookname" class="form-control">
+          <input type="text" data-validation="required" data-validation-help="Enter Book Name" name="bookname" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label for="bookAuthor">Book Author</label>
-          <input type="text" name="bookauthor" class="form-control">
+          <input type="text" data-validation="required" data-validation-help="Enter Authhor Name" name="bookauthor" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-md-2 form-group">
           <label for="sellPrice">Sell Price</label>
-          <input type="text" data-validation="number" data-validation-allowing="float" name="sellprice" class="form-control">
+          <input type="text" data-validation="number" data-validation-allowing="float" data-validation-help="Enter Sell Price" name="sellprice" class="form-control">
         </div>
       </div>
       <div class="row">
