Building book recycle site layout

--- a/index.html
+++ b/index.html
@@ -7,40 +7,62 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"><link href="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.2.8/theme-default.min.css"
     rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="css/default.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <a id="brand" class="navbar-brand" href="#">Book Recycle</a>
+        <button type="button" id="sellButton" class="btn btn-default navbar-btn pull-right">Sell Book</button>
+        <button type="button" id="buyButton" class="btn btn-default navbar-btn pull-right">Buy Book</button>
       </div>
     </nav>
     <div class="jumbotron jumboMain">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p id="mainTitle">Book Recycle</p>
+            <h1 id="mainTitle">Book Recycle</h1>
           </div>
           <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
-              <h2 id="mainFeature">Buy and Sell Used Books</h2>
+              <h1 id="mainFeature">Buy and Sell Used Books</h1>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="jumbotron feature">
+    <div class="jumbotron feature" >
       <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <img id="mountainBooks" class="img-responsive" src="images/mountainBooks.jpg">
-        </div>
-        <div class="col-md-4">
-          <h1 id="featureText" class="text-center">HAVE A MOUNTAIN A BOOKS??</h1>
+        <div class="row">
+          <div class="col-md-12">
+            <h1 id="featureText" class="text-center">HAVE A MOUNTAIN A BOOKS??</h1>    
+          </div>
         </div>
       </div>
     </div>
+    <div class="jumbotron featureTwo" >
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1 id="featureTextTwo" class="text-center">WANT A QUICK AND EASY WAY TO SELL YOUR BOOKS?</h1>
+          </div>
+          <div class="col-md-6">
+            <img  id="carryBooks" class="img-responsive" src="images/carryBooks.jpg">
+          </div>
+        </div>
+      </div>
     </div>
-    
+    <div class="jumbotron featureThree" >
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h1 id="featureTextThree" class="text-center">LIST YOUR BOOKS WITH US!</h1>
+            <h2 class="featureThreeText">GET PAID</h2>
+            <h2 class="featureThreeText">ONCE YOUR BOOK SELLS</h2>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
