Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1 id="featureText" class="text-center">HAVE A MOUNTAIN A BOOKS??</h1>    
+            <h1 id="featureText" class="text-center">HAVE A MOUNTAIN OF BOOKS??</h1>    
           </div>
         </div>
       </div>
