--- a/index.html
+++ b/index.html
@@ -28,17 +28,36 @@
               <h1 id="mainFeature">Buy and Sell Used Books</h1>
             </div>
           </div>
+          <div class="row">
+           <div class="col-lg-8 col-md-offset-2">
+            <form>
+            <div id="searchDiv" class="input-group input-group-lg">
+             <input type="text" id="bookNameSearch" name="bookNameSearch" class="form-control text-center" placeholder="SEARCH USED BOOKS FOR SALE">
+              <span class="input-group-btn">
+                <button type="button" id="submitSearch" class="btn btn-default">Go!</button>
+              </span>
+            </div>
+          </form>
+          </div>
+        </div>
         </div>
       </div>
     </div>
-    <div class="jumbotron feature" >
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 id="featureText" class="text-center">HAVE A MOUNTAIN A BOOKS??</h1>    
+    <div id="searchResultDiv" class="hide">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 col-md-offset-3">
+                <h2 id="bookNameResult" class="text-center"></h2>
+                <h2 id="bookAuthorResult" class="text-center"></h2>
+                <h2 id="bookPriceResult" class="text-center"></h2>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+    <div class="jumbotron" id="mountainText">
+      <h1 id="featureText" class="text-center">HAVE A MOUNTAIN A BOOKS??</h1>
+    </div>
+    <div class="jumbotron feature" >
     </div>
     <div class="jumbotron featureTwo" >
       <div class="container">
@@ -52,6 +71,59 @@
         </div>
       </div>
     </div>
+    <div id="listBookDiv">
+      <div
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <h2>LIST YOUR USED BOOKS FOR SALE</h2>
+          </div>
+        </div>
+      <form action="/booklist" method="post">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2 form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" data-validation="required" data-validation"alphanumeric" data-validation-help="Enter First Name" name="firstname" class="form-control">
+          </div>
+          <div class="col-md-4 form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastname" data-validation="required" data-validation"alphanumeric" data-validation-help="Enter Last Name" class="form-control">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2 form-group">
+            <label for="email">Email</label>
+            <input type="text" data-validation="required" data-validation="email" data-validation-help="Enter email address" name="email" class="form-control" data-validation="email">
+          </div>
+          <div class="col-md-4 form-group">
+            <label for="phone">Phone Number</label>
+            <input type="text" data-validation="required" data-validation-help="Enter phone number" name="phone" class="form-control">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2 form-group">
+            <label for="bookName">Book Name</label>
+            <input type="text" data-validation="required" data-validation-help="Enter Book Name" name="bookname" class="form-control">
+          </div>
+          <div class="col-md-4 form-group">
+            <label for="bookAuthor">Book Author</label>
+            <input type="text" data-validation="required" data-validation-help="Enter Authhor Name" name="bookauthor" class="form-control">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 form-group">
+            <label for="sellPrice">Sell Price</label>
+            <input type="text" data-validation="number" data-validation-allowing="float" data-validation-help="Enter Sell Price" name="sellprice" class="form-control">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <button id="submitList" type="submit" class="center-block btn btn-primary">List Book</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
     <div class="jumbotron featureThree" >
       <div class="container">
         <div class="row">
@@ -61,81 +133,15 @@
             <h2 class="featureThreeText">ONCE YOUR BOOK SELLS</h2>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <button type="button" id="listBookButton" class="btn btn-default btn-lg center-block">LIST YOUR BOOK</button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <h2>LIST YOUR USED BOOKS FOR SALE</h2>
-        </div>
-      </div>
-    <form action="/booklist" method="post">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-2 form-group">
-          <label for="firstName">First Name</label>
-          <input type="text" data-validation="required" data-validation"alphanumeric" data-validation-help="Enter First Name" name="firstname" class="form-control">
-        </div>
-        <div class="col-md-4 form-group">
-          <label for="lastName">Last Name</label>
-          <input type="text" name="lastname" data-validation="required" data-validation"alphanumeric" data-validation-help="Enter Last Name" class="form-control">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-2 form-group">
-          <label for="email">Email</label>
-          <input type="text" data-validation="required" data-validation="email" data-validation-help="Enter email address" name="email" class="form-control" data-validation="email">
-        </div>
-        <div class="col-md-4 form-group">
-          <label for="phone">Phone Number</label>
-          <input type="text" data-validation="required" data-validation-help="Enter phone number" name="phone" class="form-control">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-2 form-group">
-          <label for="bookName">Book Name</label>
-          <input type="text" data-validation="required" data-validation-help="Enter Book Name" name="bookname" class="form-control">
-        </div>
-        <div class="col-md-4 form-group">
-          <label for="bookAuthor">Book Author</label>
-          <input type="text" data-validation="required" data-validation-help="Enter Authhor Name" name="bookauthor" class="form-control">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4 form-group">
-          <label for="sellPrice">Sell Price</label>
-          <input type="text" data-validation="number" data-validation-allowing="float" data-validation-help="Enter Sell Price" name="sellprice" class="form-control">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <button id="submitList" type="submit" class="center-block btn btn-primary">List Book</button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="container">
-    <form>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <label for="bookName">Book Name</label>
-          <input type="text" id="bookNameSearch" name="bookNameSearch" class="form-control">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <button id="submitSearch" type="button" class="center-block btn btn-primary">Search Books</button>
-        </div>
-      </div> 
-    </form>
-      </div class="row">
-        </div class="col-md-6 col-md-offset-3">
-          <h2 id="bookNameResult" class="text-center"></h2>
-          <h2 id="bookAuthorResult" class="text-center"></h2>
-          <h2 id="bookPriceResult" class="text-center"></h2>
-        </div>
-      </div>
-  </div>
-  <div class="container">
+    
+ <!-- <div class="container">
         <form action="" id="registration-form">
           <div class="row">
             <div class="col-md-6 form-group">
@@ -203,7 +209,7 @@
             <button id="signform" type="button" class="center-block btn btn-primary">Check Out</button>
           </div>
         </div>
-      </div>
+      </div> -->
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.2.8/jquery.form-validator.min.js"></script>
