--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
           </div>
           <div class="row">
-           <div class="col-lg-8 col-md-offset-2">
+           <div class="col-md-8 col-md-offset-2">
             <form>
             <div id="searchDiv" class="input-group input-group-lg">
              <input type="text" id="bookNameSearch" name="bookNameSearch" class="form-control text-center" placeholder="SEARCH USED BOOKS FOR SALE">
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <div id="searchResultDiv" class="hide">
+    <div id="searchResultDiv">
           <div class="container">
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
