Styling Book Recycle site.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h2>LIST YOUR USED BOOKS FOR SALE</h2>
+            <h2>LIST YOUR BOOKS FOR SALE</h2>
           </div>
         </div>
       <form action="/booklist" method="post">
